<resources>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="app_name">PetSit</string>
    <string name="descripcionfondo">Imagen de fondo</string>
    <string name="msjbienvenida">¡Bienvenido a PetSit!</string>
    <string name="descripcion">Tu app para ayudar a mascotas perdidas y encontradas, conectando corazones peludos con sus hogares.</string>
    <string name="btncomenzar">COMENZAR</string>
    <string name="btnback">Botón volver</string>
    <string name="registro">Registro</string>
    <string name="registroRefugio">Registro</string>
    <string name="registroUsuario">Registro</string>
    <string name="tituloregistro">¿QUÉ DESEA REGISTRAR?</string>
    <string name="registrousuario">Usuario</string>
    <string name="registrorefugio">Refugio</string>
    <string name="login">¿Ya tienes cuenta? Iniciar Sesión</string>
    <string name="botondeusuario">Registrar Usuario</string>
    <string name="botonrefugio">Registrar Refugio</string>
    <string name="loginboton">Iniciar sesión</string>
    <string name="nuevousuario">Nuevo Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="contraseña">Contraseña</string>
    <string name="guardar">Guardar</string>
    <string name="btninicio">INICIAR SESIÓN</string>
    <string name="olvido">Olvidé mi clave</string>
    <string name="recuperar">Humano: ingresá tus datos para recuperar tu contraseña</string>
    <string name="clavenueva">Contraseña nueva</string>
    <string name="nuevorefugio">Nuevo Refugio</string>
    <string name="registrarmascota">Registrar Mascota</string>
    <string name="menu">Menú</string>
    <string name="mascotaperdida">Mascota Perdida</string>
    <string name="mascotaperdidadaboton">Boton Mascota Perdida</string>
    <string name="mascotaencontrada">Mascota Encontrada</string>
    <string name="mascotaencontradaboton">Botón Mascota Encontrada</string>
    <string name="refugios">Refugios</string>
    <string name="refugiosboton">Botón Refugios</string>
    <string name="petshop">PetShop</string>
    <string name="petshopboton">Botón PetShop</string>
    <string name="mensajes">Chat</string>
    <string name="mensajesboton">Botón chat</string>
    <string name="perfil">Perfil</string>
    <string name="perfilboton">Botón Perfil</string>
    <string name="ajustes">Ajustes</string>
    <string name="ajustesboton">Botón Ajustes</string>
    <string name="qr">QR</string>
    <string name="btnExit">boton salir</string>
    <string name="registrarmascotaboton">Boton Registrar Mascota></string>
    <string name="registromascota">Registrar Mascota</string>
    <string name="raza">Raza</string>
    <string name="edad">Edad</string>
    <string name="caract">Caracteristicas</string>
    <string name="btnCargarImagen">Boton cargar imagen</string>
    <string name="cargarimagen">Subir Imagen</string>
    <string name="mascotasperdidas">Mascotas Perdidas</string>
    <string name="imagenmascota">imagen de mascota perdida</string>
    <string name="nombremascota1">Luna</string>
    <string name="nombremascota2">Sasha</string>
    <string name="nombremascota3">Bolt</string>
    <string name="nombremascota4">Blacki</string>
    <string name="iconoreportar">Boton reportar mascota</string>
    <string name="reportarmascota">Reportar una mascota</string>
    <string name="reporte">Reportar Mascota Perdida</string>
    <string name="seleccionar">Seleccionar Mascota</string>
    <string-array name="mascotasArray">
        <item>Seleccione tipo de animal</item>
        <item>Perro</item>
        <item>Gato</item>
        <item>Otro</item>
    </string-array>
    <string name="ubicacion">Ubicación:</string>
    <string name="botonubicacion">Boton para cargar ubicación</string>
    <string name="descripcionmascota">Descripción de la mascota</string>
    <string name="reportar">Reportar</string>
    <string name="nombremascota6">Tutuca</string>
    <string name="nombremascota7">Canela</string>
    <string name="nombremascota8">Pitu</string>
    <string name="nombremascota9">Mora</string>
    <string name="reportemascota">Reportar Mascota Encontrada</string>
    <string name="imagenrefugio">Imagen del refugio</string>
    <string name="refugio1">EL ARCA DE LOS PELUDOS</string>
    <string name="numero1">Tel: 112345876</string>
    <string name="direc1">Dirección: San Martin 124</string>
    <string name="refugio2">PARAÍSO DE PELOS</string>
    <string name="numero2">Tel: 2323488565</string>
    <string name="direc2">Dirección: Guemes 678</string>
    <string name="refugio3">CIELO DE MASCOTAS</string>
    <string name="numero3">Tel: 114587888</string>
    <string name="direc3">Dirección: Perú 666</string>
    <string name="refugio4">SANTUARIO DE BIGOTES</string>
    <string name="numero4">Tel: 114788855</string>
    <string name="direc4">Dirección: Mitre 478</string>
    <string name="bienvenidoPetShop">¡Bienvenido a Patitas PetShop!</string>
    <string name="descripcionPetShop">Estamos encantados de tenerte aquí. En Patitas Petshop, encontrarás todo lo que tu mascota necesita, desde alimentos y juguetes hasta accesorios y servicios especializados. Nuestro compromiso es ofrecerte productos de calidad y atención personalizada para que tu fiel amigo siempre esté feliz y saludable.</string>
    <string name="botonalimento">boton alimento</string>
    <string name="alimento">Alimento</string>
    <string name="botonindumentaria">Boton Indumentaria</string>
    <string name="indumentaria">Indumentaria</string>
    <string name="botonjueguetes">Botón Jueguetes</string>
    <string name="juguetes">Juguetes</string>
    <string name="botonhigiene">Botón Higiene</string>
    <string name="higiene">Higiene</string>
    <string name="botonatencion">Botón Atencion al Cliente</string>
    <string name="atencionalcliente">Atención al Cliente</string>
    <string name="imagenperfil">Imagen de perfil</string>
    <string name="apellido">Apellido</string>
    <string name="celular">11455875</string>
    <string name="clave">Contraseña</string>
    <string name="Email">correo@gmail.com</string>
    <string name="nombreyapellido">*Nombre y apellido*</string>
    <string name="editaremail">Boton editar Email</string>
    <string name="editarcelular">Botón editar Celular</string>
    <string name="editarnombre">Botón editar nombre\n</string>
    <string name="editarapellido">Botón editar Apellido</string>
    <string name="editarclave">Botón editar clave\n</string>
    <string name="mismascotas">Mis Mascotas:</string>
    <string name="imgdescripcion">foto de un perro</string>
    <string name="imgdescripcion2">imagen de un gato</string>
    <string name="mascotanombre1">Brownie</string>
    <string name="edadmascota1">Años: 5</string>
    <string name="razamascota1">Raza: -</string>
    <string name="nombmascota2">Flopy</string>
    <string name="edadmascota2">Años: 10</string>
    <string name="razamascota2">Raza: Siames</string>
    <string name="soyrefugio">Soy un Refugio</string>
    <string name="soyusuario">Soy un Usuario</string>
    <string name="misanimales">Mis Animales\n</string>
    <string name="botonmisanimales">Botón mis animales</string>
    <string name="botonreportes">Botón reportes</string>
    <string name="reportes">Reportes</string>
    <string name="botonSolicitudes">Botón solicitudes</string>
    <string name="solicitudes">Solicitudes</string>
    <string name="botonperfil">Botón perfil</string>
    <string name="nuevoanimal">Registrar un animal nuevo</string>
    <string name="imagenanimal">imagen de un animal en adopción\n\n</string>
    <string name="nombreAnimal">Lucio</string>
    <string name="edadAnimal">Edad: 3 años</string>
    <string name="nombreAnimal2">Pituca</string>
    <string name="edadAnimal2">Edad: 6 años</string>
    <string name="nombreanimal3">Pelusa</string>
    <string name="edadAnimal3">Edad: 8 años</string>
    <string name="nombreAnimal4">Meily</string>
    <string name="edadAnimal4">Edad: 11 años</string>
    <string name="nombreAnimal5">Lulu</string>
    <string name="edadAnimal5">Edad: 4 meses</string>
    <string name="txtnohayreportes">NO HAY REPORTES NUEVOS</string>
    <string name="registraranimal">Registrar un Animal</string>
    <string name="solicitud">Solicitud de Adopción</string>
    <string name="ver">Ver Solicitud</string>
    <string name="direccion">Dirección</string>
    <string name="editardireccion">Botón editar direccion</string>
    <string name="emailRefugio">Email</string>
    <string name="horarios">Horarios</string>
    <string name="editarhorarios">Botón editar horarios</string>
    <string name="nombreRefugio">Nombre</string>


</resources>
