<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilUsuarioActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/descripcionfondo"
        android:scaleType="centerCrop"
        android:src="@drawable/fondomenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btnback"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/txtPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        android:textColor="#757575"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toStartOf="@+id/backgroundImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPerfil">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgPerfil"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="45dp"
                android:contentDescription="@string/imagenperfil"
                android:src="@drawable/iconoperfil"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/txtNombreApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nombreyapellido"
                android:layout_gravity="center_horizontal"
                android:textColor="#757575"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="362dp"
                android:layout_height="66dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="email"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:textColor="#000000"
                    android:textColorHint="#757575" />

                <ImageButton
                    android:id="@+id/btnEditEmail"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/editaremail"
                    android:src="@drawable/iconoeditar" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="361dp"
                android:layout_height="66dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/etCelular"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="celular"
                    android:hint="@string/celular"
                    android:inputType="numberDecimal"
                    android:textColor="#000000"
                    android:textColorHint="#757575" />

                <ImageButton
                    android:id="@+id/btnEditCelular"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/editarcelular"
                    android:src="@drawable/iconoeditar" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="361dp"
                android:layout_height="66dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="nombre"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHint="#757575" />

                <ImageButton
                    android:id="@+id/btnEditNombre"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/editarnombre"
                    android:src="@drawable/iconoeditar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="361dp"
                android:layout_height="66dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/etApellido"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="apellido"
                    android:hint="@string/apellido"
                    android:inputType="textPersonName"
                    android:textColor="#000000"
                    android:textColorHint="#757575" />

                <ImageButton
                    android:id="@+id/btnEditApellido"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/editarapellido"
                    android:src="@drawable/iconoeditar" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="362dp"
                android:layout_height="66dp"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:orientation="horizontal"
                android:padding="12dp">

                <EditText
                    android:id="@+id/etClave"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:autofillHints="clave"
                    android:hint="@string/clave"
                    android:inputType="textPassword"
                    android:textColor="#000000"
                    android:textColorHint="#757575" />

                <ImageButton
                    android:id="@+id/btnEditClave"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/editarclave"
                    android:src="@drawable/iconoeditar" />
            </LinearLayout>

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="120sp"
                android:layout_marginEnd="10sp"
                android:backgroundTint="#757575"
                android:text="@string/guardar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtMisMascotas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:text="@string/mismascotas"
                android:textColor="#757575"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/pet10"
                            android:contentDescription="@string/imgdescripcion" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/mascotanombre1"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/edadmascota1"
                            android:textColor="#757575"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/razamascota1"
                            android:textColor="#757575"
                            android:textSize="14sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:contentDescription="@string/imgdescripcion2"
                            android:scaleType="centerCrop"
                            android:src="@drawable/pet11"
                            tools:ignore="ImageContrastCheck" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/nombmascota2"
                            android:textColor="#000"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/edadmascota2"
                            android:textColor="#757575"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/razamascota2"
                            android:textColor="#757575"
                            android:textSize="14sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
