<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuUsuarioActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/descripcionfondo"
        android:scaleType="centerCrop"
        android:src="@drawable/fondomenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btnback"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <ImageButton
        android:id="@+id/btnExit"
        android:layout_width="55dp"
        android:layout_height="54dp"
        android:layout_margin="28dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/btnExit"
        android:padding="13sp"
        android:scaleType="centerCrop"
        android:src="@drawable/iconosalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textColor="#757575"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="@+id/backgroundImage"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="415dp"
        android:layout_height="173dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logopetsit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        tools:ignore="VisualLintBounds" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logoImage">

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignMargins"
            android:columnCount="2"
            android:columnOrderPreserved="false"
            android:rowCount="4">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="1dp"
                android:orientation="vertical">


                <ImageButton
                    android:id="@+id/btnRegistrarMascota"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@drawable/iconoboton"
                    android:contentDescription="@string/registrarmascotaboton"
                    android:scaleType="centerCrop"
                    android:padding="19dp"
                    android:src="@drawable/iconoregistrarmascota" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/registrarmascota"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:paddingStart="1dp"
                android:paddingEnd="10dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnMascotaPerdida"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@drawable/iconoboton"
                    android:contentDescription="@string/mascotaperdidadaboton"
                    android:scaleType="centerCrop"
                    android:padding="19dp"
                    android:src="@drawable/iconomascotaperdida" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/mascotaperdida"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="1dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnMascotaEncontrada"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@drawable/iconoboton"
                    android:contentDescription="@string/mascotaencontradaboton"
                    android:scaleType="centerCrop"
                    android:padding="19dp"
                    android:src="@drawable/iconomascotaencontrada" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/mascotaencontrada"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:paddingStart="1dp"
                android:paddingEnd="10dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnRefugios"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@drawable/iconoboton"
                    android:contentDescription="@string/refugiosboton"
                    android:scaleType="centerCrop"
                    android:padding="19dp"
                    android:src="@drawable/iconorefugio" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/refugios"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="15dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnPetshop"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@drawable/iconoboton"
                    android:contentDescription="@string/petshopboton"
                    android:scaleType="centerCrop"
                    android:padding="19dp"
                    android:src="@drawable/iconopetshop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/petshop"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:paddingStart="1dp"
                android:paddingEnd="10dp"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/btnPerfil"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:background="@drawable/iconoboton"
                    android:contentDescription="@string/perfilboton"
                    android:scaleType="centerCrop"
                    android:padding="19dp"
                    android:src="@drawable/iconoperfil" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/perfil"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />
            </LinearLayout>



        </GridLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
